# aifc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  settings.json
babai/: ai_plugin.cpp  ai_plugin.h  babai.cpp  babai.h  steering.cc  steering.h
cmake/: FindSDL2_image.cmake
include/: AICommand.h  AIInput.h  ai_command.h  ai_input.h  float2.h  math.h  math_types.h  ship_description.h  ship_info.h  thruster_description.h
include/ai/: IAI.h  IAIPlugin.h  i_ai.h  i_ai_plugin.h
src/: action_buffer.cc  action_buffer.h  application.cpp  application.h  battle.cc  battle.h  bullet.cc  bullet.h  color.h  entity.cc  entity.h  faction_ai_command.cc  faction_ai_command.h  faction_state.cpp  faction_state.h  main.cpp  plugin_wrapper.cpp  plugin_wrapper.h  ship_pool.cc  ship_pool.h  ship_state.cpp  ship_state.h
test/: ai_plugin.cpp  ai_plugin.h  testai.cpp  testai.h
